plugins {
    id 'java'
    id 'idea'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
}

group = 'com.mohistmc'
version = project.version

java {
    toolchain.languageVersion = JavaLanguageVersion.of(22)
}

tasks.withType(JavaCompile).configureEach {
    options.warnings = false
    options.encoding = 'UTF-8'
}

repositories {
    mavenLocal()
    mavenCentral()
    maven { url 'https://maven.mohistmc.com/' }
    maven { url 'https://maven.aliyun.com/repository/public/' }
    maven { url 'https://jitpack.io/' }
    maven { url 'https://repo.maven.apache.org/maven2' }

    maven { url 'https://repo.opencollab.dev/maven-snapshots/' }
    maven { url 'https://repo.opencollab.dev/maven-releases/' }

    maven { url "https://mirrors.cloud.tencent.com/nexus/repository/maven-public/" }
}


dependencies {
    compileOnly 'org.projectlombok:lombok:1.18.32'
    annotationProcessor 'org.projectlombok:lombok:1.18.32'
    implementation 'com.google.code.gson:gson:2.10'

    implementation 'org.javacord:javacord:3.8.0' // Discord 机器人
    implementation 'com.github.theholywaffle:teamspeak3-api:1.3.1' // TS3
    implementation 'com.mohistmc:yaml:0.7'
    implementation 'com.mohistmc:tools:0.5.1'
    implementation 'com.mohistmc:json:0.3'
    implementation 'com.mysql:mysql-connector-j:8.2.0'
    implementation 'org.slf4j:slf4j-api:2.0.12'
    implementation 'org.slf4j:slf4j-simple:2.0.12'

    implementation 'com.github.steveice10:mcprotocollib:1.20.2-1'
    implementation 'dnsjava:dnsjava:3.4.3'

    compileOnly 'org.jetbrains:annotations:24.1.0'
}

shadowJar {
    dependencies {
        exclude(dependency('net.kyori:adventure-api'))
        exclude(dependency('net.kyori:adventure-text'))
        exclude(dependency('net.kyori:adventure-key'))
        exclude(dependency('net.kyori:adventure-nbt'))
        exclude(dependency('net.kyori:adventure'))
        exclude(dependency('net.kyori:examination-api'))
        exclude(dependency('net.kyori:examination-string'))
        exclude(dependency('net.kyori:adventure-text-serializer-json'))
        exclude(dependency('net.kyori:adventure-text-serializer-gson'))
        exclude(dependency('net.kyori:adventure-text-serializer-json-legacy-impl'))
        exclude(dependency('net.kyori:adventure-text-serializer-gson-legacy-impl'))
    }
}

jar {
    manifest {
        attributes(
                'Main-Class': 'com.mohistmc.ai.App'
        )
    }
}

jar.dependsOn(shadowJar)